# cryptokami-core

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  appveyor.yml  default.nix  docker.nix  lib.nix  release.nix  shell.nix  stack.yaml
.buildkite/: pipeline.yml
auxx/: cryptokami-sl-auxx.cabal
auxx/src/: AuxxOptions.hs  Repl.hs
binary/: cryptokami-sl-binary.cabal
block/: cryptokami-sl-block.cabal
client/: cryptokami-sl-client.cabal
core/: cryptokami-sl-core.cabal
core/Pos/: Exception.hs
core/Pos/Core/: Class.hs
core/Pos/System/Metrics/: Constants.hs
core/Pos/Util/: AssertMode.hs
crypto/: cryptokami-sl-crypto.cabal
crypto/Pos/Binary/: Crypto.hs
crypto/Pos/Crypto/: HD.hs  SecretSharing.hs
crypto/Pos/Crypto/Signing/: Check.hs  Safe.hs  Signing.hs
daedalus/: README.md  bower.json  package.json
daedalus/src/: index.js
daedalus/src/Daedalus/: ClientApi.purs
db/: cryptokami-sl-db.cabal
db/Pos/DB/: Error.hs  Sum.hs
delegation/: cryptokami-sl-delegation.cabal
docs/: README.md  auxx.md  configuration.md  databases.md  docker.md  exceptions.md  hd.md  launcher.md  monads.md  rollback-reaction.md
docs/block-processing/: overall.md  txp.md  types.md  us.md
docs/how-to/: build-cryptokami-sl-and-daedalus-from-source-code.md  connect-to-cluster.md  generate-blockchain.md  generate-genesis.md  push-update-on-mainnet.md  rollback-blocks.md  run-explorer-web-ui.md  send-requests-to-explorer-api.md  send-requests-to-wallet-api.md  test-update-system.md
docs/network/: policy.md
docs/proposals/: serialization.md  update-downloader.md
docs/tx/: binary-format.md  processing.md  signing.md
explorer/: CHANGELOG.md  README.md  cryptokami-sl-explorer.cabal  start-dev.sh
explorer/bench/: Main.hs
explorer/frontend/: README.md  bower.json  package.json
explorer/frontend/scripts/: build.sh
explorer/frontend/src/: global.css  index.css  index.tpl.html
explorer/scripts/: fetch_dependencies.sh  generate_cabal2nix.sh
explorer/scripts/launch/: qa.sh  staging.sh
explorer/src/documentation/: Main.hs
explorer/src/explorer/: ExplorerNodeOptions.hs  NodeOptions.hs
explorer/src/mock/: Main.hs
explorer/src/purescript/: PSOptions.hs
generator/: cryptokami-sl-generator.cabal
infra/: cryptokami-sl-infra.cabal
infra/Pos/Arbitrary/: Infra.hs
infra/Pos/Network/: Policy.hs  Types.hs
infra/Pos/Reporting/: Ekg.hs  Exceptions.hs  MemState.hs  Methods.hs  Metrics.hs
infra/Pos/Slotting/: Error.hs
infra/Pos/Util/: Monitor.hs
infra/Pos/Worker/: Types.hs
lib/: README.md  configuration.yaml  cryptokami-sl.cabal
lib/src/Pos/: Aeson.hs  SafeCopy.hs  Web.hs  Worker.hs
lib/src/Pos/Logic/: Types.hs
lrc/: cryptokami-sl-lrc.cabal
networking/: README.md  cryptokami-sl-networking.cabal
networking/src/: Node.hs
node/: README.md  cryptokami-sl-node.cabal
pkgs/: default.nix  generate.sh
scripts/: README.md  check-stack2nix.sh  common-functions.sh  deps_checksum  hash-installer.sh
scripts/bench/: buildbench.sh
scripts/ci/: ci.sh  update-cli-docs.sh  update-explorer-web-api-docs.sh  update-haddock.sh  update-wallet-web-api-docs.sh
scripts/clean/: all.sh  db.sh
scripts/haskell/: dependencies.sh  update-cabal-versions.sh
scripts/launch/: Test.hs  auxx.sh  demo-with-new-wallet-api.sh  demo-with-wallet-api.sh  demo.sh  explorer.sh
scripts/launch/connect-to-cluster/: default.nix  mainnet-staging.sh
scripts/prepare-genesis/: README.md  build-cryptokami.sh  gen-avvm-seeds.sh  gen-delegate-keys.sh  genesis-prep-test.sh  keys-and-certs.sh
ssc/: cryptokami-sl-ssc.cabal
ssc/Pos/Ssc/: VssCertData.hs
tools/: cryptokami-sl-tools.cabal
tools/src/addr-convert/: Main.hs
tools/src/blockchain-analyser/: Options.hs
tools/src/cli-docs/: Main.hs
tools/src/dht-keygen/: Main.hs
tools/src/genupdate/: Main.hs
tools/src/keygen/: KeygenOptions.hs
tools/src/launcher/: Main.hs  launcher-config.yaml
tools/src/post-mortem/: Options.hs
txp/: cryptokami-sl-txp.cabal
txp/Pos/Txp/: Error.hs
update/: cryptokami-sl-update.cabal
update/Pos/Binary/: Update.hs
update/Pos/Update/: Constants.hs
util/: cryptokami-sl-util.cabal
util/Pos/Util/: Util.hs
wallet/: cryptokami-sl-wallet.cabal
wallet-new/: README.md  cryptokami-sl-wallet-new.cabal
wallet-new/docs/: updates.md
wallet-new/server/: Main.hs
wallet-new/server/Cryptokami/Wallet/: Server.hs
wallet-new/server/Cryptokami/Wallet/API/V0/: Handlers.hs
wallet-new/server/Cryptokami/Wallet/API/V1/: Handlers.hs  Swagger.hs
wallet-new/server/Cryptokami/Wallet/API/V1/Handlers/: Accounts.hs  Addresses.hs  Info.hs  Settings.hs  Transactions.hs  Updates.hs  Wallets.hs
wallet-new/server/Cryptokami/Wallet/API/V1/Swagger/: Example.hs
wallet-new/server/Cryptokami/Wallet/Server/: CLI.hs  Plugins.hs
wallet-new/spec/: swagger.json
wallet-new/src/Cryptokami/Wallet/: API.hs  Orphans.hs  TypeLits.hs  Util.hs
wallet-new/src/Cryptokami/Wallet/API/: Indices.hs  Request.hs  Response.hs  Types.hs  V0.hs  V1.hs
wallet-new/src/Cryptokami/Wallet/API/Request/: Filter.hs  Pagination.hs  Sort.hs
wallet-new/src/Cryptokami/Wallet/API/Response/: JSend.hs
wallet-new/src/Cryptokami/Wallet/API/Response/Filter/: IxSet.hs  Legacy.hs
wallet-new/src/Cryptokami/Wallet/API/Response/Sort/: IxSet.hs
wallet-new/src/Cryptokami/Wallet/API/Types/: UnitOfMeasure.hs
wallet-new/src/Cryptokami/Wallet/API/V0/: Types.hs
wallet-new/src/Cryptokami/Wallet/API/V1/: Accounts.hs  Addresses.hs  Errors.hs  Generic.hs  Info.hs  Migration.hs  Parameters.hs  Settings.hs  Transactions.hs  Types.hs  Updates.hs  Wallets.hs
wallet-new/src/Cryptokami/Wallet/API/V1/Migration/: Monads.hs  Types.hs
wallet-new/src/Cryptokami/Wallet/Orphans/: Aeson.hs  Arbitrary.hs  Bi.hs
wallet-new/test/: APISpec.hs  MarshallingSpec.hs  SwaggerSpec.hs
wallet-new/test/unit/: WalletUnitTest.hs
wallet-new/test/unit/UTxO/: Bootstrap.hs  Context.hs  Crypto.hs  DSL.hs  Interpreter.hs  Translate.hs  Verify.hs
wallet/node/: NodeOptions.hs
wallet/purescript/: Main.hs
wallet/web-api-swagger/: Main.hs
(+54 files in other folders)
