name:                cryptokami-sl-client
version:             1.0.3
synopsis:            Cryptokami SL client modules
description:         Cryptokami SL client modules
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Pos.Client.Txp
                       Pos.Client.Txp.Addresses
                       Pos.Client.Txp.Balances
                       Pos.Client.Txp.History
                       Pos.Client.Txp.Network
                       Pos.Client.Txp.Util

                       Pos.Client.Update
                       Pos.Client.Update.Network

                       Pos.Client.KeyStorage

  build-depends:       base
                     , cryptokami-sl
                     , cryptokami-sl-block
                     , cryptokami-sl-core
                     , cryptokami-sl-crypto
                     , cryptokami-sl-db
                     , cryptokami-sl-infra
                     , cryptokami-sl-networking
                     , cryptokami-sl-txp
                     , cryptokami-sl-update
                     , cryptokami-sl-util
                     , containers
                     , data-default
                     , ether
                     , formatting
                     , lens
                     , log-warper
                     , monad-control
                     , mtl
                     , serokell-util
                     , stm
                     , text-format
                     , transformers
                     , universum
                     , unordered-containers
                     , vector
                     , QuickCheck

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite cryptokami-client-test
  main-is:             Test.hs
  other-modules:
                       Spec

                       -- Txp
                       Test.Pos.Client.Txp.Mode
                       Test.Pos.Client.Txp.UtilSpec

  type:                exitcode-stdio-1.0

  build-depends:       MonadRandom
                     , QuickCheck
                     , base
                     , bytestring
                     , cryptokami-sl
                     , cryptokami-sl-client
                     , cryptokami-sl-core
                     , cryptokami-sl-crypto
                     , cryptokami-sl-db
                     , cryptokami-sl-infra
                     , cryptokami-sl-ssc
                     , cryptokami-sl-txp
                     , cryptokami-sl-update
                     , cryptokami-sl-util
                     , containers
                     , formatting
                     , hspec
                     , universum >= 0.1.11
                     , unordered-containers

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
