name:                cryptokami-sl-node
version:             1.0.3
synopsis:            Cryptokami SL simple node executable
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cryptokami-node-simple
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , cryptokami-sl-core
                     , cryptokami-sl-infra
                     , cryptokami-sl-update
                     , cryptokami-sl-ssc
                     , cryptokami-sl-networking
                     , cryptokami-sl-update
                     , cryptokami-sl-util
                     , cryptokami-sl
                     , formatting
                     , log-warper
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
