name:                cryptokami-sl-tools
version:             1.0.3
synopsis:            CryptoKami Core - Tools
description:         CryptoKami Core - Tools
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

-- Note: for components that we don't want to build, we add both "buildable:
-- False" *and* wrap build-depends into "if !flag(for-installer)". This is
-- because stack doesn't seem to take "buildable: False" into account when
-- calculating the build plan.
Flag for-installer
  default:     False
  manual:      True

  description: Build a reduced set of components (only what is needed for the
               installer)

executable cryptokami-dht-keygen
  hs-source-dirs:      src/dht-keygen
  main-is:             Main.hs
  if !flag(for-installer)
   build-depends:      QuickCheck
                     , aeson
                     , array
                     , base
                     , bytestring
                     , cryptokami-sl
                     , cryptokami-sl-core
                     , cryptokami-sl-crypto
                     , data-default
                     , filepath
                     , formatting
                     , kademlia
                     , lens
                     , log-warper
                     , optparse-applicative
                     , parsec
                     , random
                     , random-shuffle
                     , serokell-util >= 0.1.3.4
                     , stm
                     , text
                     , time
                     , universum >= 0.1.11
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        ApplicativeDo
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(for-installer)
    buildable: False

executable cryptokami-genupdate
  hs-source-dirs:      src/genupdate
  main-is:             Main.hs
  build-depends:       base
                     , ansi-wl-pprint
                     , bytestring
                     , cryptokami-sl
                     , cryptokami-sl-util
                     , cryptonite
                     , neat-interpolation
                     , optparse-applicative
                     , filepath
                     , formatting
                     , process
                     , tar
                     , text
                     , universum
                     , unix-compat
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:  OverloadedStrings
                       NoImplicitPrelude
                       BangPatterns
                       ApplicativeDo
                       RecordWildCards
                       ScopedTypeVariables
                       MonadFailDesugaring

executable cryptokami-keygen
  hs-source-dirs:      src/keygen
  main-is:             Main.hs
  other-modules:       KeygenOptions
                     , Dump
  if !flag(for-installer)
   build-depends:      Glob
                     , QuickCheck >= 2.9
                     , aeson
                     , ansi-wl-pprint
                     , base
                     , base58-bytestring
                     , bytestring >= 0.10
                     , canonical-json
                     , cryptokami-sl
                     , cryptokami-sl-core
                     , cryptokami-sl-crypto
                     , cryptokami-sl-txp
                     , containers
                     , cryptonite
                     , data-default
                     , directory
                     , ed25519
                     , filepath
                     , formatting
                     , lens
                     , log-warper
                     , neat-interpolation
                     , optparse-applicative >= 0.12
                     , parsec
                     , random >= 1.1
                     , safe-exceptions
                     , serokell-util >= 0.1
                     , text
                     , universum >= 0.1
                     , unordered-containers
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        ScopedTypeVariables
                        MonadFailDesugaring

  if flag(for-installer)
    buildable: False
  else
    buildable: True

executable cryptokami-launcher
  hs-source-dirs:      src/launcher
  main-is:             Main.hs

  build-depends:       aeson
                     , ansi-wl-pprint
                     , async
                     , base
                     , bytestring
                     , cryptokami-report-server >= 0.2.1
                     , cryptokami-sl
                     , cryptokami-sl-block
                     , cryptokami-sl-core
                     , cryptokami-sl-db
                     , cryptokami-sl-infra
                     , cryptokami-sl-update
                     , cryptokami-sl-util
                     , directory
                     , filepath
                     , formatting
                     , lens
                     , lifted-async
                     , log-warper
                     , neat-interpolation
                     , optparse-applicative
                     , process
                     , safe-exceptions
                     , serokell-util
                     , silently
                     , text
                     , time-units
                     , universum
                     , unordered-containers
                     , yaml
  if !os(windows)
    build-depends:     unix
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:  OverloadedStrings
                       RecordWildCards
                       TupleSections
                       TypeApplications
                       BangPatterns
                       ScopedTypeVariables
                       MonadFailDesugaring

  if os(windows)
    LD-Options:     -mwindows

executable cryptokami-addr-convert
  hs-source-dirs:      src/addr-convert
  main-is:             Main.hs
  build-depends:       base
                     , ansi-wl-pprint
                     , cryptokami-sl
                     , cryptokami-sl-core
                     , cryptokami-sl-crypto
                     , cryptokami-sl-util
                     , neat-interpolation
                     , optparse-applicative
                     , text
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        ApplicativeDo
                        ScopedTypeVariables
                        MonadFailDesugaring

executable cryptokami-cli-docs
  hs-source-dirs:      src/cli-docs
  main-is:             Main.hs
  if !flag(for-installer)
   build-depends:      base
                     , bytestring
                     , cryptokami-sl
                     , directory
                     , filepath
                     , neat-interpolation
                     , optparse-applicative
                     , process
                     , text
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   NoImplicitPrelude
                        BangPatterns
                        RecordWildCards
                        OverloadedStrings
                        ApplicativeDo
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(for-installer)
    buildable: False

executable cryptokami-post-mortem
  hs-source-dirs:      src/post-mortem
  main-is:             Main.hs
  other-modules:       JSONLog
                     , Options
                     , Statistics
                     , Statistics.Block
                     , Statistics.Chart
                     , Statistics.CSV
                     , Statistics.Focus
                     , Statistics.Graph
                     , Statistics.MemPool
                     , Statistics.Report
                     , Statistics.Throughput
                     , Statistics.Tx
                     , Types
                     , Util.Aeson
                     , Util.Pipes
                     , Util.Safe
  if !flag(for-installer)
    buildable: True
    build-depends:       Chart
                       , Chart-diagrams
                       , MonadRandom
                       , aeson
                       , attoparsec
                       , base
                       , cryptokami-sl
                       , cryptokami-sl-block
                       , cryptokami-sl-core
                       , cryptokami-sl-txp
                       , cryptokami-sl-util
                       , containers
                       , directory
                       , fgl
                       , filepath
                       , foldl
                       , graphviz
                       , optparse-applicative
                       , pipes
                       , pipes-bytestring
                       , pipes-interleave
                       , pipes-safe
                       , process
                       , random
                       , text
                       , time-units
                       , universum >= 0.1.11
  else
    buildable: False
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2
  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        ScopedTypeVariables
                        ScopedTypeVariables
                        BangPatterns
                        MonadFailDesugaring

executable cryptokami-blockchain-analyser
  hs-source-dirs:      src/blockchain-analyser
  main-is:             Main.hs
  other-modules:       Options
                       Types
                       Rendering
  if !flag(for-installer)
   build-depends:      ansi-wl-pprint
                     , base
                     , cryptokami-sl
                     , cryptokami-sl-binary
                     , cryptokami-sl-block
                     , cryptokami-sl-core
                     , cryptokami-sl-crypto
                     , cryptokami-sl-db
                     , cryptokami-sl-infra
                     , cryptokami-sl-networking
                     , cryptokami-sl-lrc
                     , cryptokami-sl-txp
                     , cryptokami-sl-util
                     , data-default
                     , directory
                     , formatting
                     , lens
                     , mtl
                     , neat-interpolation
                     , optparse-applicative
                     , serokell-util
                     , tabl
                     , text
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   RecordWildCards
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        ScopedTypeVariables
                        FlexibleContexts
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(for-installer)
    buildable: False
