name:                cryptokami-sl-wallet-new
version:             0.1.0.0
synopsis:            The Wallet Backend for a Cryptokami node.
description:         Please see README.md
homepage:            https://github.com/swagger-api/swagger-codegen#readme
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2017 - Input Output Hong Kong
license:             MIT
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cryptokami.Wallet.Orphans
                       Cryptokami.Wallet.Orphans.Aeson
                       Cryptokami.Wallet.Orphans.Arbitrary
                       Cryptokami.Wallet.Orphans.Bi
                       Cryptokami.Wallet.API
                       Cryptokami.Wallet.API.Types
                       Cryptokami.Wallet.API.Types.UnitOfMeasure
                       Cryptokami.Wallet.API.V1
                       Cryptokami.Wallet.API.V1.Generic
                       Cryptokami.Wallet.API.V1.Types
                       Cryptokami.Wallet.API.V1.Parameters
                       Cryptokami.Wallet.API.V1.Addresses
                       Cryptokami.Wallet.API.V1.Accounts
                       Cryptokami.Wallet.API.V1.Transactions
                       Cryptokami.Wallet.API.V1.Settings
                       Cryptokami.Wallet.API.V1.Info
                       Cryptokami.Wallet.API.V1.Wallets
                       Cryptokami.Wallet.API.V1.Errors
                       Cryptokami.Wallet.API.V1.Updates
                       Cryptokami.Wallet.API.V1.Migration
                       Cryptokami.Wallet.API.V0
                       Cryptokami.Wallet.API.V0.Types
                       Cryptokami.Wallet.Util

  ghc-options:         -Wall
  build-depends:       base
                     , QuickCheck
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , exceptions
                     , formatting
                     , generics-sop
                     , http-api-data
                     , http-client
                     , http-types
                     , json-sop
                     , lens
                     , memory
                     , mtl
                     , network-uri
                     , safe-exceptions
                     , servant
                     , servant-client
                     , servant-server
                     , template-haskell
                     , text
                     , text-format
                     , transformers
                     , universum
                     , unordered-containers
                     , vector
                     , serokell-util
                     , warp
                     , cryptokami-sl-core
                     , cryptokami-sl-crypto
                     , cryptokami-sl-util
                     , cryptokami-sl-wallet
                     , cryptokami-sl-networking
                     -- Avoidable deps(?)
                     , cryptokami-sl
                     , cryptokami-sl-infra
                     , cryptokami-sl-ssc
                     , cryptokami-sl-update
  default-language:    Haskell2010
  default-extensions: TypeOperators
                      DataKinds
                      DefaultSignatures
                      NoImplicitPrelude
                      MultiParamTypeClasses
                      OverloadedStrings
                      ScopedTypeVariables
                      FlexibleInstances
                      FlexibleContexts
                      TypeFamilies
                      TypeApplications
                      TypeOperators
                      TemplateHaskell
                      RecordWildCards
                      ScopedTypeVariables
                      UndecidableInstances

executable wallet-new-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2
  other-modules:       Cryptokami.Wallet.API.V0.Handlers
                       Cryptokami.Wallet.API.V1.Handlers
                       Cryptokami.Wallet.API.V1.Handlers.Accounts
                       Cryptokami.Wallet.API.V1.Handlers.Addresses
                       Cryptokami.Wallet.API.V1.Handlers.Transactions
                       Cryptokami.Wallet.API.V1.Handlers.Settings
                       Cryptokami.Wallet.API.V1.Handlers.Info
                       Cryptokami.Wallet.API.V1.Handlers.Wallets
                       Cryptokami.Wallet.API.V1.Handlers.Updates
                       Cryptokami.Wallet.API.V1.Swagger
                       Cryptokami.Wallet.Server
                       Cryptokami.Wallet.Server.CLI
                       Cryptokami.Wallet.Server.Plugins
  build-depends:       base
                     , QuickCheck
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , cryptokami-sl
                     , cryptokami-sl-core
                     , cryptokami-sl-crypto
                     , cryptokami-sl-util
                     , cryptokami-sl-update
                     , cryptokami-sl-infra
                     , cryptokami-sl-networking
                     , cryptokami-sl-ssc
                     , cryptokami-sl-txp
                     , cryptokami-sl-wallet
                     , cryptokami-sl-wallet-new
                     , containers
                     , data-default
                     , exceptions
                     , formatting
                     , formatting
                     , http-api-data
                     , http-types
                     , insert-ordered-containers
                     , lens
                     , log-warper
                     , mtl
                     , neat-interpolation
                     , optparse-applicative
                     , servant
                     , servant-server
                     , servant-swagger
                     , serokell-util
                     , memory
                     , stm
                     , string-conv
                     , swagger2
                     , text
                     , text-format
                     , time-units
                     , universum
                     , unordered-containers
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  default-extensions: TypeOperators
                      DataKinds
                      DefaultSignatures
                      NoImplicitPrelude
                      MultiParamTypeClasses
                      OverloadedStrings
                      ScopedTypeVariables
                      FlexibleInstances
                      FlexibleContexts
                      TypeFamilies
                      TypeApplications
                      TypeOperators
                      TemplateHaskell
                      RecordWildCards
                      ScopedTypeVariables
                      UndecidableInstances

test-suite wallet-new-specs
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  default-language: Haskell2010
  hs-source-dirs:   server test

  other-modules:    SwaggerSpec
                    APISpec
                    MarshallingSpec

                    Cryptokami.Wallet.API.V0.Handlers
                    Cryptokami.Wallet.API.V1.Handlers
                    Cryptokami.Wallet.API.V1.Handlers.Accounts
                    Cryptokami.Wallet.API.V1.Handlers.Addresses
                    Cryptokami.Wallet.API.V1.Handlers.Transactions
                    Cryptokami.Wallet.API.V1.Handlers.Settings
                    Cryptokami.Wallet.API.V1.Handlers.Info
                    Cryptokami.Wallet.API.V1.Handlers.Wallets
                    Cryptokami.Wallet.API.V1.Handlers.Updates
                    Cryptokami.Wallet.API.V1.Swagger

  default-language: Haskell2010
  default-extensions: TypeOperators
                      DataKinds
                      DefaultSignatures
                      NoImplicitPrelude
                      MultiParamTypeClasses
                      OverloadedStrings
                      ScopedTypeVariables
                      FlexibleInstances
                      FlexibleContexts
                      TypeFamilies
                      TypeApplications
                      TypeOperators
                      TemplateHaskell
                      RecordWildCards
                      ScopedTypeVariables
                      UndecidableInstances

  build-depends:      base

  if !os(windows)
      build-depends:    QuickCheck
                      , aeson
                      , aeson-pretty
                      , bytestring
                      , cryptokami-sl
                      , cryptokami-sl-core
                      , cryptokami-sl-crypto
                      , cryptokami-sl-util
                      , cryptokami-sl-update
                      , cryptokami-sl-infra
                      , cryptokami-sl-networking
                      , cryptokami-sl-ssc
                      , cryptokami-sl-txp
                      , cryptokami-sl-wallet
                      , cryptokami-sl-wallet-new
                      , containers
                      , data-default
                      , exceptions
                      , formatting
                      , hspec
                      , http-client
                      , http-types
                      , insert-ordered-containers
                      , lens
                      , neat-interpolation
                      , quickcheck-instances
                      , memory
                      , safe-exceptions
                      , serokell-util
                      , servant
                      , servant-quickcheck
                      , servant-server
                      , servant-swagger
                      , string-conv
                      , stm
                      , swagger2
                      , text
                      , universum
                      , unordered-containers
